Villager Profession (#1)
* Villager Profession

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: Goldorion <38427877+Goldorion@users.noreply.github.com>
Co-authored-by: KlemenDEV <16374228+KlemenDEV@users.noreply.github.com>
Co-authored-by: Defeatomizer <drag7398@gmail.com>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: AlsoSomeoneElse <64546452+AlsoSomeoneElse@users.noreply.github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: NerdyPuzzle <112079900+NerdyPuzzle@users.noreply.github.com>
Co-authored-by: Matej <matej2000@gmail.com>
Co-authored-by: kleiders3010 <71478358+kleiders3010@users.noreply.github.com>
Co-authored-by: Max094Reikeb <49318596+Max094Reikeb@users.noreply.github.com>