@@ -30,14 +30,18 @@ import net.mcreator.generator.blockly.BlocklyBlockCodeGenerator;
 import net.mcreator.generator.blockly.OutputBlockCodeGenerator;
 import net.mcreator.generator.blockly.ProceduralBlockCodeGenerator;
 import net.mcreator.generator.template.IAdditionalTemplateDataProvider;
+import net.mcreator.ui.blockly.BlocklyEditorType;
 import net.mcreator.workspace.elements.ModElement;
 
 import javax.annotation.Nullable;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 @SuppressWarnings("unused") public class Feature extends GeneratableElement implements ICommonType {
+
+	public static final String XML_BASE = "<xml xmlns=\"https://developers.google.com/blockly/xml\"><block type=\"feature_container\" deletable=\"false\" x=\"40\" y=\"40\"></block></xml>";
 
 	public String generationStep;
 	public List<String> restrictionDimensions;
@@ -56,11 +60,18 @@ import java.util.List;
 	@Override public @Nullable IAdditionalTemplateDataProvider getAdditionalTemplateData() {
 		return additionalData -> {
 			var blocklyBlockCodeGenerator = new BlocklyBlockCodeGenerator(
-					BlocklyLoader.INSTANCE.getFeatureBlockLoader().getDefinedBlocks(),
-					this.getModElement().getGenerator().getTemplateGeneratorFromName("features"), additionalData);
+					BlocklyLoader.INSTANCE.getBlockLoader(BlocklyEditorType.FEATURE).getDefinedBlocks(),
+					getModElement().getGenerator().getGeneratorStats().getBlocklyBlocks(BlocklyEditorType.FEATURE),
+					this.getModElement().getGenerator()
+							.getTemplateGeneratorFromName(BlocklyEditorType.FEATURE.registryName()),
+					additionalData).setTemplateExtension(
+					this.getModElement().getGeneratorConfiguration().getGeneratorName().equals("forge-1.18.2") ?
+							"java" :
+							"json"); // 1.18 features are in Java
 
 			var blocklyToFeature = new BlocklyToFeature(this.getModElement().getWorkspace(), this.getModElement(),
-					this.featurexml, this.getModElement().getGenerator().getTemplateGeneratorFromName("features"),
+					this.featurexml, this.getModElement().getGenerator()
+					.getTemplateGeneratorFromName(BlocklyEditorType.FEATURE.registryName()),
 					new ProceduralBlockCodeGenerator(blocklyBlockCodeGenerator),
 					new OutputBlockCodeGenerator(blocklyBlockCodeGenerator));
 
@@ -75,6 +86,10 @@ import java.util.List;
 	}
 
 	@Override public Collection<BaseType> getBaseTypesProvided() {
-		return List.of(BaseType.FEATURE);
+		if (hasGenerationConditions() || this.getModElement().getGeneratorConfiguration().getGeneratorName()
+				.equals("forge-1.18.2")) {
+			return List.of(BaseType.FEATURE);
+		}
+		return Collections.emptyList();
 	}
 }
